--- a/app-megasena/src/main/res/values/strings.xml
+++ b/app-megasena/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">QAndroid100</string>
+    <string name="app_name">Q100 MegaSena</string>
     <string name="sorte">Estamos com sorte hoje?</string>
     <string name="sorteio">00 00 00 00 00 00</string>
     <string name="btn_sortear">Sortear</string>
