--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">QAndroid100</string>
+    <string name="app_name">Q100 Aulas</string>
     <string name="name">Quem é você?</string>
     <string name="bt_oi">Oi</string>
     <string name="teste">oknok</string>
