--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,31 @@
     <string name="bt_oi">Oi</string>
     <string name="teste">oknok</string>
     <string name="novoTexto">Testando strings</string>
-    <string name="aula04">Aula 04</string>
+    <string name="aulas01_04">Aulas 01_04 - Oi</string>
+    <string name="aula05">Aula 05</string>
+    <string name="aula06">Aula 06</string>
+    <string name="aula07">Aula 07</string>
+    <string name="aula08">Aula 08</string>
+    <string name="aula09">Aula 09</string>
+    <string name="aula10">Aula 10</string>
+    <string name="aula11">Aula 11</string>
+    <string name="aula12">Aula 12</string>
+    <string name="aula13">Aula 13</string>
+    <string name="aula14">Aula 14</string>
+    <string name="aula15">Aula 15</string>
+    <string name="aula16">Aula 16</string>
+    <string name="aula17">Aula 17</string>
+    <string name="aula18">Aula 18</string>
+    <string name="aula19">Aula 19</string>
+    <string name="aula20">Aula 20</string>
+    <string name="aula21">Aula 21</string>
+    <string name="aula22">Aula 22</string>
+    <string name="aula23">Aula 23</string>
+    <string name="aula24">Aula 24</string>
+    <string name="aula25">Aula 25</string>
     <string name="megasena_label">MegaSena</string>
     <string name="company">Quaddro</string>
-    <string name="carregando">Carregando...</string>
+    <string name="carregando">Carregando…</string>
     <string name="user">Usuário</string>
     <string name="password">Sehna</string>
     <string name="lembrar">Lembrar?</string>
