--- a/app-megasena/src/main/res/values/strings.xml
+++ b/app-megasena/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="sorte">Estamos com sorte hoje?</string>
     <string name="sorteio">00 00 00 00 00 00</string>
     <string name="btn_sortear">Sortear</string>
+    <string name="jogos">Jogos</string>
+    <string name="sorteios">10</string>
 </resources>
