--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,13 +5,7 @@
     <string name="teste">oknok</string>
     <string name="novoTexto">Testando strings</string>
     <string name="aulas01_04">Aulas 01_04 - Oi</string>
-    <string name="aula05">Aula 05</string>
-    <string name="aula06">Aula 06</string>
-    <string name="aula07">Aula 07</string>
-    <string name="aula08">Aula 08</string>
-    <string name="aula09">Aula 09</string>
-    <string name="aula10">Aula 10</string>
-    <string name="aula11">Aula 11</string>
+    <string name="aulas05_11">Aulas 05_11 - MegaSena/Animações</string>
     <string name="aula12">Aula 12</string>
     <string name="aula13">Aula 13</string>
     <string name="aula14">Aula 14</string>
