--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,11 @@
     <string name="fade01">Fade 1</string>
     <string name="fade02">Fade 2</string>
     <string name="hyperspace">H Space</string>
+    <string name="aula11">Aula 11 - Spinner</string>
+
+    <string-array name="emails">
+        <item>Casa</item>
+        <item>Trabalho</item>
+        <item>Outros</item>
+    </string-array>
 </resources>
