--- a/app-megasena/src/main/res/values/strings.xml
+++ b/app-megasena/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="btn_sortear">Sortear</string>
     <string name="jogos">Jogos</string>
     <string name="sorteios">10</string>
+    <string name="copiado">Copiado!</string>
 </resources>
