--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,8 @@
     <string name="video_cancelado">Vídeo Cancelado!</string>
     <string name="uri">URL</string>
     <string name="go">IR</string>
+    <string name="web_back">Voltar</string>
+    <string name="web_forward">ir</string>
 
     <string-array name="emails">
         <item>Casa</item>
