--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="aula15">Aula 15 - ChatHead</string>
     <string name="aula16a">Aula 16 - SharedPreferences</string>
     <string name="aula16b">Aula 16 - File CSV</string>
-    <string name="aula17">Aula 17</string>
+    <string name="aula17">Aula 17 - SQLite</string>
     <string name="aula18">Aula 18</string>
     <string name="aula19">Aula 19</string>
     <string name="aula20">Aula 20</string>
@@ -61,6 +61,7 @@
     <string name="carro_fabricante">Fabricante</string>
     <string name="carro_descricao">Descrição</string>
     <string name="carro_limpar">Limpar</string>
+    <string name="carro_alterar">Alterar</string>
 
     <string-array name="emails">
         <item>Casa</item>
