--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,8 +14,8 @@
     <string name="aula16b">Aula 16 - File CSV</string>
     <string name="aula17">Aula 17_18 - SQLite</string>
     <string name="aula19">Aula 19 - Service</string>
-    <string name="aula20">Aula 20</string>
-    <string name="aula21">Aula 21</string>
+    <string name="aula20a">Aula 20 - Vibrator</string>
+    <string name="aula20b">Aula 20 - Jogo com Bola</string>
     <string name="aula22">Aula 22</string>
     <string name="aula23">Aula 23</string>
     <string name="aula24">Aula 24</string>
